--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,3 +28,7 @@ jobs:
        run: |
           pytest
     
+     - name: Lint with flake8
+       run: |
+        pip install flake8
+        flake8 .
