--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,34 +1,26 @@
-name: Run Python CI
+name: Python CI Matrix
 
-on:
-  push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+on: [push, pull_request]
 
 jobs:
-  build:
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.8, 3.9, 3.10]
 
-     runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
 
-     steps:
-     - name: Checkout code
-       uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
 
-     - name: set up Python
-       uses: actions/setup-python@v5
-       with:
-          python-version: '3.10'
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
 
-     - name: Install dependencies
-       run: |
-          pip install -r requirements.txt
-
-     - name: Run tests
-       run: |
-          pytest
-    
-     - name: Lint with flake8
-       run: |
-        pip install flake8
-        flake8 .
+    - name: Run tests
+      run: |
+        pytest
